# temperature-converter-cpp

./: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp  main.cpp  temp_conv.hpp
test/: CMakeLists.txt
test/source/: temperature-converter_test.cpp
